--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ Geschichte/UNO/UNO-Collage.png
 Geschichte/UNO/UNO-Collage2.xcf
 Geschichte/UNO/UNO.pdf
 Geschichte/UNO/combined.pdf
+
+
+PM/Wish.md 
+PM/Wish.odp
+wish-logo.png
